--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2135,6 +2135,15 @@
     <ClCompile Include="Codeforces\500\540\540A.cpp">
       <Filter>Codeforces\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\110\116A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\100\110\116B.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\100\130\136A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
