--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2147,6 +2147,9 @@
     <ClCompile Include="Codeforces\500\510\519B.cpp">
       <Filter>Codeforces\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\50\59A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
