--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2150,6 +2150,9 @@
     <ClCompile Include="Codeforces\1\50\59A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\300\340\344A.cpp">
+      <Filter>Codeforces\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
