--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2156,6 +2156,9 @@
     <ClCompile Include="Codeforces\600\670\677A.cpp">
       <Filter>Codeforces\600</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\480\486A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
