--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2159,6 +2159,9 @@
     <ClCompile Include="Codeforces\400\480\486A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\400\405A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
