--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2165,6 +2165,12 @@
     <ClCompile Include="Codeforces\900\930\935A.cpp">
       <Filter>Codeforces\900</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\900\990\996A.cpp">
+      <Filter>Codeforces\900</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\1100\1150\1154A.cpp">
+      <Filter>Codeforces\1100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
