--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2171,6 +2171,9 @@
     <ClCompile Include="Codeforces\1100\1150\1154A.cpp">
       <Filter>Codeforces\1100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\700\740\746A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
