--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2174,6 +2174,9 @@
     <ClCompile Include="Codeforces\700\740\746A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1010\1015A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
