--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2189,6 +2189,12 @@
     <ClCompile Include="UVa\12900\12992.cpp">
       <Filter>UVa\12900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12900\12917.cpp">
+      <Filter>UVa\12900</Filter>
+    </ClCompile>
+    <ClCompile Include="UVa\12900\12955.cpp">
+      <Filter>UVa\12900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
