--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2207,6 +2207,9 @@
     <ClCompile Include="UVa\12900\12946.cpp">
       <Filter>UVa\12900</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12900\12967.cpp">
+      <Filter>UVa\12900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
