--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2210,6 +2210,9 @@
     <ClCompile Include="UVa\12900\12967.cpp">
       <Filter>UVa\12900</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\160\160A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
