--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2213,6 +2213,9 @@
     <ClCompile Include="Codeforces\100\160\160A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\900\950\959A.cpp">
+      <Filter>Codeforces\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
