--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2222,6 +2222,9 @@
     <ClCompile Include="Codeforces\1100\1140\1146A.cpp">
       <Filter>Codeforces\1100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\12900\12950.cpp">
+      <Filter>UVa\12900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
