--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2234,6 +2234,9 @@
     <ClCompile Include="Codeforces\700\740\749A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1000\1006A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
