--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2237,6 +2237,9 @@
     <ClCompile Include="Codeforces\1000\1000\1006A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\800\830\835A.cpp">
+      <Filter>Codeforces\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
