--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2249,6 +2249,9 @@
     <ClCompile Include="Codeforces\500\580\581A.cpp">
       <Filter>Codeforces\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1000\1005A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
