--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2252,6 +2252,9 @@
     <ClCompile Include="Codeforces\1000\1000\1005A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\700\720\721A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
