--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2261,6 +2261,9 @@
     <ClCompile Include="Codeforces\1000\1070\1077A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\700\710\711A.cpp">
+      <Filter>Codeforces\700</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
