--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2267,6 +2267,9 @@
     <ClCompile Include="Codeforces\400\470\476A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\480\489B.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
