--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2276,6 +2276,9 @@
     <ClCompile Include="Codeforces\500\570\577A.cpp">
       <Filter>Codeforces\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\490\492A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
