--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2279,6 +2279,9 @@
     <ClCompile Include="Codeforces\400\490\492A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\280\281A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
