--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2282,6 +2282,9 @@
     <ClCompile Include="Codeforces\200\280\281A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\270\271A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
