--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2285,6 +2285,9 @@
     <ClCompile Include="Codeforces\200\270\271A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\130\133A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
