--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2288,6 +2288,9 @@
     <ClCompile Include="Codeforces\100\130\133A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1\40\41A.cpp">
+      <Filter>Codeforces\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
