--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2291,6 +2291,9 @@
     <ClCompile Include="Codeforces\1\40\41A.cpp">
       <Filter>Codeforces\1</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\200\200\208A.cpp">
+      <Filter>Codeforces\200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
