--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2306,6 +2306,9 @@
     <ClCompile Include="Codeforces\200\230\230A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\140\141A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
