--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2309,6 +2309,9 @@
     <ClCompile Include="Codeforces\100\140\141A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\300\330\339B.cpp">
+      <Filter>Codeforces\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
