--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2312,6 +2312,9 @@
     <ClCompile Include="Codeforces\300\330\339B.cpp">
       <Filter>Codeforces\300</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\470\472A.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
