--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2318,6 +2318,12 @@
     <ClCompile Include="Codeforces\500\520\520A.cpp">
       <Filter>Codeforces\500</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\400\490\492B.cpp">
+      <Filter>Codeforces\400</Filter>
+    </ClCompile>
+    <ClCompile Include="Codeforces\100\180\189A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
