--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2327,6 +2327,9 @@
     <ClCompile Include="Codeforces\700\700\703A.cpp">
       <Filter>Codeforces\700</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\900\970\978A.cpp">
+      <Filter>Codeforces\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
